--- a/MarketSimulation/instructionscreen5.ui
+++ b/MarketSimulation/instructionscreen5.ui
@@ -107,7 +107,12 @@
         </font>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;At the top of the screen is a decryption key. Use this key to decipher the encrypted word. To complete a decryption enter the decrypted letters in the space provided and press the Submit button.&lt;/p&gt;&lt;p&gt;For example, by using the decryption key we can see that the first letter in the encrypted word, I, corresponds to the letter C in the decrypted word. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;At the top of the screen is a decryption key. Use this key to decipher the encrypted word. To complete a decryption enter the decrypted letters in the space provided and press the Submit button.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;For example, by using the decryption key we can see that the first letter in the encrypted word, &lt;span style=&quot; font-weight:600;&quot;&gt;I&lt;/span&gt;, corresponds to the letter &lt;span style=&quot; font-weight:600;&quot;&gt;C&lt;/span&gt; in the decrypted word. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
