--- a/MarketSimulation/instructionscreen7.ui
+++ b/MarketSimulation/instructionscreen7.ui
@@ -117,7 +117,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The final letter in the encrypted word, W, corresponds to T in the decrypted word. So in this case you would enter C-A-T into the space provided and then click the Submit button.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The final letter in the encrypted word, &lt;span style=&quot; font-weight:600;&quot;&gt;W&lt;/span&gt;, corresponds to &lt;span style=&quot; font-weight:600;&quot;&gt;T&lt;/span&gt; in the decrypted word. So in this case you would enter &lt;span style=&quot; font-weight:600;&quot;&gt;C-A-T&lt;/span&gt; into the space provided and then click the Submit button.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
